everything basically (formatting and stuff)

--- a/main.html
+++ b/main.html
@@ -54,8 +54,10 @@
 
         <button style="cursor:pointer;" id="enterBTN"> Enter</button>
 
-    
-    <h2 class="aiText"></h2>
+    <div class="aiContainer">
+
+        <section class="aiText" aria-live="polite"></section>
+    </div>
 
 
     <script type="module" src="script.js" defer></script>
