added some animations

--- a/main.html
+++ b/main.html
@@ -13,13 +13,13 @@
 
     <div class="gradeDiv">
 
-        <h1>Grade:</h1>
+        <h1 id="gradeText">Grade:</h1>
         <input id="gradeTB" placeholder="ex:junior">
     </div>
     
     <div class="cgDiv">
 
-        <h1>Classes+Grades:</h1>
+        <h1 id="CGtext">Classes+Grades:</h1>
         <input id="cgTB1" placeholder="ex:apush - 99">
         <input id="cgTB2">
         <input id="cgTB3">
@@ -41,14 +41,14 @@
 
     <div class="schoolDiv">
 
-        <h1>School:</h1>
+        <h1 id="schoolText">School:</h1>
         <input id="schoolTB" placeholder="ex:Long Ridge High School, Stamford, CT">
     </div>
 
 
     <div class="passionDiv">
 
-        <h1>Passion/Area of Intrest:</h1>
+        <h1 id = "PassionText">Passion/Area of Intrest:</h1>
         <input id="passionTB" placeholder="ex:Computers">
     </div>
 
