added a lot of ui improvements... basically the entire main.html page

--- a/main.html
+++ b/main.html
@@ -72,6 +72,11 @@
     
     <img id="aiMan" src="roji.png">
 
+    <div>
+        <h1 id="welcomeText">Welcome to CounselorAI!</h1>
+
+    </div>
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const aiText = document.querySelector(".aiText");
