--- a/main.html
+++ b/main.html
@@ -17,7 +17,6 @@
 
     <div class="contdiv">
         
-
     
 
     <div class="gradeDiv">
@@ -76,6 +75,9 @@
 
     </div>
     <div><button style="cursor:pointer;" id="enterBTN"> Enter</button> </div>
+
+        <h1 id="dot"></h1>
+
 
 
     <script>
