--- a/main.html
+++ b/main.html
@@ -80,11 +80,12 @@
 
     <h1 id="timer">Time left: 30</h1>
     
-    <img id="target" src="logo.png">
-
-    <button id="testButton">asdf</button>
-
     <canvas id="canvas" width="700" height="400"></canvas>
+    <img style="cursor:pointer;" id="target" src="logo.png">
+
+    <button style="cursor:pointer;" id="testButton">Start Game</button>
+    <h1 id="scoreText">Score: 0</h1>
+
 
 
 
