committing the newest version so rohan can work on it at home

--- a/intro.html
+++ b/intro.html
@@ -21,8 +21,12 @@
         CounselorAI
     </header>
     <div class="introBody">
-        This program is designed to help you choose 
-        the classes for your upcoming year, so that you can get into the college of your dreams.
+        
+        <span id="introBodyTyping">
+            This program is designed to help 
+            you choose the classes for your upcoming year, 
+            so that you can get into the college of your dreams.
+        </span>
     </div>
     
     <img id="logo" src="logo.png">
