Updated login page UI

--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
     <div class="cgDiv">
         
         <h1 id="CGtext">Classes + Scores:</h1>
-        <input id="cgTB1" placeholder="ex:apush - 99">
+        <input id="cgTB1" placeholder=" Ex:APUSH - 99">
         <input id="cgTB2">
         <input id="cgTB3">
         <input id="cgTB4">
