Updated login page UI

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
 
 </div>
     <div class="logPassword">
-        <label for="password"><b>Password</b></label>
+        <label id="PasswordText" for="password"><b>Password</b></label>
         <input id="logPasswordTB" type="password" placeholder="Enter password" name="password" required>
     </div>
 
