pushing so that rohan won't be scared of losing his so called good layout of the login page

--- a/login.html
+++ b/login.html
@@ -20,6 +20,13 @@
         <input id="logUserTB" type="text" placeholder="Enter username" name="username" required>
     </div>
 
+    <div class="questionOutline">
+        <div class ="TextQuestion">Our AI provides high quality responses to your queries. However for us to keep a track of our users, and also you can save past queries and be informed through them, we reccomend logging in, or signing up.</div>
+
+    </div>
+    <div id = "WhyId"> Why Log In/Sign Up?</div>
+
+
 <div class="welcomeDiv">
     Welcome Back!
 
