--- a/login.html
+++ b/login.html
@@ -14,6 +14,8 @@
 </head>
 <body>
     
+    <div class="logOutlineTop"></div>
+    <div class="logOutlineBottom"></div>
     <div class="logOutline"></div>
     <div class="logUser">
         <label for="username"><b>Username</b></label>
