--- a/login.html
+++ b/login.html
@@ -14,20 +14,20 @@
 </head>
 <body>
     
-    <div class="logOutlineTop"></div>
-    <div class="logOutlineBottom"></div>
     <div class="logOutline"></div>
     <div class="logUser">
         <label for="username"><b>Username</b></label>
         <input id="logUserTB" type="text" placeholder="Enter username" name="username" required>
     </div>
 
+  
+
 <div class="welcomeDiv">
     Welcome Back!
 
 </div>
     <div class="logPassword">
-        <label for="password"><b>Password</b></label>
+        <label id="PasswordText" for="password"><b>Password</b></label>
         <input id="logPasswordTB" type="password" placeholder="Enter password" name="password" required>
     </div>
 
